Update Atendimento: Real-time Evolution API, QrCode Status Polling, CRM table migration fixes

--- a/index.html
+++ b/index.html
@@ -5,23 +5,21 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-  <title>ViaMoveCar Admin | Painel de Gestão</title>
-  <meta name="description"
-    content="ViaMoveCar Admin: painel central de gestão com CRM, financeiro, WhatsApp e dashboard da operação." />
-  <meta name="author" content="ViaMoveCar" />
+  <title>Integrai | Sistema de Gestão Inteligente</title>
+  <meta name="description" content="Integrai: CRM + Atendimento WhatsApp e automações de vendas unificados." />
+  <meta name="author" content="Integrai" />
   <link rel="canonical" href="/" />
 
   <!-- PWA / web app -->
   <meta name="theme-color" content="#0b5ed7" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-  <meta name="apple-mobile-web-app-title" content="ViaMoveCar" />
+  <meta name="apple-mobile-web-app-title" content="Integrai" />
   <link rel="apple-touch-icon" href="/favicon.ico" />
   <link rel="manifest" href="/manifest.webmanifest" />
 
-  <meta property="og:title" content="ViaMoveCar Admin | Painel de Gestão" />
-  <meta property="og:description"
-    content="Centralize CRM, atendimento WhatsApp, financeiro e gestão de usuários em um único painel ViaMoveCar." />
+  <meta property="og:title" content="Integrai | Sistema de Gestão Inteligente" />
+  <meta property="og:description" content="Centralize CRM, atendimento WhatsApp e automações de vendas no Integrai." />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
