style: update website favicon to Integrai logo

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   <meta name="apple-mobile-web-app-title" content="Integrai" />
-  <link rel="apple-touch-icon" href="/favicon.ico" />
+  <link rel="icon" type="image/jpeg" href="/logo-integrai.jpg" />
+  <link rel="shortcut icon" href="/logo-integrai.jpg" />
+  <link rel="apple-touch-icon" href="/logo-integrai.jpg" />
   <link rel="manifest" href="/manifest.webmanifest" />
 
   <meta property="og:title" content="Integrai | Sistema de Gestão Inteligente" />
