--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   <meta name="apple-mobile-web-app-title" content="Integrai" />
-  <link rel="icon" type="image/jpeg" href="/logo-integrai.jpg" />
-  <link rel="shortcut icon" href="/logo-integrai.jpg" />
-  <link rel="apple-touch-icon" href="/logo-integrai.jpg" />
+  <link rel="icon" type="image/jpeg" href="/logo-integrai.jpg?v=2" />
+  <link rel="shortcut icon" href="/logo-integrai.jpg?v=2" />
+  <link rel="apple-touch-icon" href="/logo-integrai.jpg?v=2" />
   <link rel="manifest" href="/manifest.webmanifest" />
 
   <meta property="og:title" content="Integrai | Sistema de Gestão Inteligente" />
   <meta property="og:description" content="Centralize CRM, atendimento WhatsApp e automações de vendas no Integrai." />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  <meta property="og:image" content="/logo-integrai.jpg" />
 
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  <meta name="twitter:image" content="/logo-integrai.jpg" />
 </head>
 
 <body>
